# advent-of-code

./: Jenkinsfile
.cargo/: config.toml
2018/: README.md
2018/aoc1/src/: main.rs
2018/aoc3/: Cargo.toml
2018/aoc3/src/: main.rs
2018/aoc4/: Cargo.toml
2018/aoc5/src/: main.rs
2018/aoc6/: Cargo.toml
2018/aoc8/src/: main.rs
2019/: Cargo.toml
2019/src/: computer.rs  day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day16.rs  day17.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
2020/: Cargo.toml
2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  lib.rs  main.rs
2021/: Cargo.toml  README.adoc
2021/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d16.rs  main.rs
2021/src/d16/: d16_bitvec.rs  d16_nom.rs
2022/: Cargo.toml  README.adoc
2022/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  lib.rs  template.rs
2023/: Cargo.toml
2023/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  main.rs  template.rs
2024/: Cargo.toml  bacon.toml
2024/src/: day1.rs  day2.rs  day3.rs  lib.rs
aoc1/: Cargo.toml
aoc2/: Cargo.toml
aoc2/src/: main.rs
aoc3/src/: main.rs
aoc4/src/: main.rs
aoc5/: Cargo.toml
aoc5/src/: main.rs
aoc6/src/: main.rs
aoc7/: Cargo.toml
aoc7/src/: main.rs
aoc8/: Cargo.toml
aoc8/src/: main.rs
aoc9/: Cargo.toml
(+1 files in other folders)
