[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Rob Donnelly <rfdonnelly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
itertools = "0.9"

[dev-dependencies]
indoc = "1"
