[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
tap = "1.0"
rayon = "1.5"
bitvec = { version = "0.22", optional = true }
nom = { version = "7", optional = true }

[dev-dependencies]
indoc = "1.0"

[features]
default = ["bitvec"]
