[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
indoc = "2.0.4"
itertools = "0.12.0"
joinery = "3.1.0"
regex = "1.10.2"
tap = "1.0.1"
